# PredatorPreySim

./: .gitignore  CMakeLists.txt  README.md
include/: linear.h  mlp.h  neuron.h  prey.h
include/engine/: spatial_grid.h  world.h
include/entities/: agent.h  brain.h  predator.h  prey.h  vision.h
include/nn/: classifier.h  layer.h  linear.h  mlp.h  neuron.h  relu.h
include/utils/: ray.h  vector2d.h
scripts/: visualize.py
src/: main.cpp  neuron.cpp
src/engine/: spatial_grid.cpp  world.cpp
src/entities/: agent.cpp  brain.cpp  predator.cpp  prey.cpp  vision.cpp
src/nn/: classifier.cpp  linear.cpp  mlp.cpp  neuron.cpp
src/utils/: ray.cpp  vector2d.cpp
